<feature>[crypto]: add support for crypto clinet modularization APIImpact DBImpact
Resolves: ZSTAC-71363

Change-Id: I7767136369666f666d727279726c66736b736b62