@@ -8,26 +8,40 @@ import org.reflections.util.FilterBuilder;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.zstack.abstraction.PluginDriver;
 import org.zstack.abstraction.PluginValidator;
+import org.zstack.core.CoreGlobalProperty;
 import org.zstack.core.Platform;
+import org.zstack.core.asyncbatch.While;
 import org.zstack.core.cloudbus.CloudBus;
+import org.zstack.core.cloudbus.CloudBusCallBack;
 import org.zstack.core.db.DatabaseFacade;
+import org.zstack.core.db.Q;
+import org.zstack.core.thread.ChainTask;
+import org.zstack.core.thread.SyncTaskChain;
+import org.zstack.core.thread.ThreadFacade;
 import org.zstack.header.AbstractService;
-import org.zstack.header.core.external.plugin.APIRefreshPluginDriversMsg;
-import org.zstack.header.core.external.plugin.APIRefreshPluginDrviersEvent;
-import org.zstack.header.core.external.plugin.PluginDriverVO;
+import org.zstack.header.core.WhileDoneCompletion;
+import org.zstack.header.core.external.plugin.*;
+import org.zstack.header.errorcode.ErrorCodeList;
 import org.zstack.header.errorcode.OperationFailureException;
 import org.zstack.header.exception.CloudRuntimeException;
+import org.zstack.header.managementnode.ManagementNodeVO;
+import org.zstack.header.managementnode.ManagementNodeVO_;
 import org.zstack.header.message.Message;
+import org.zstack.header.message.MessageReply;
+import org.zstack.utils.Bash;
 import org.zstack.utils.Utils;
 import org.zstack.utils.gson.JSONObjectUtil;
 import org.zstack.utils.logging.CLogger;
+import org.zstack.utils.path.PathUtil;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.io.File;
+import java.lang.reflect.InvocationTargetException;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.net.URLClassLoader;
+import java.util.*;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
 
 import static org.zstack.core.Platform.operr;
 
@@ -41,6 +55,8 @@ public class PluginManagerImpl extends AbstractService implements PluginManager 
     private DatabaseFacade dbf;
     @Autowired
     private CloudBus bus;
+    @Autowired
+    private ThreadFacade thdf;
 
     private final Set<Class<? extends PluginDriver>> pluginMetadata = new HashSet<>();
     private final Map<String, PluginDriver> pluginInstances = new HashMap<>();
@@ -48,6 +64,15 @@ public class PluginManagerImpl extends AbstractService implements PluginManager 
             pluginRegisters = new HashMap<>();
     private final Map<Class<? extends PluginDriver>, PluginValidator>
             pluginValidators = new HashMap<>();
+    private String fileDirPath = PathUtil.join(CoreGlobalProperty.DATA_DIR, "/plugins/");
+
+    public String getFileDirPath() {
+        return fileDirPath;
+    }
+
+    public void setFileDirPath(String fileDirPath) {
+        this.fileDirPath = fileDirPath;
+    }
 
     private void collectPluginProtocolMetadata() {
         ConfigurationBuilder builder = ConfigurationBuilder.build()
@@ -80,19 +105,16 @@ public class PluginManagerImpl extends AbstractService implements PluginManager 
             PluginDriver pluginDriver = pluginRegisterClz
                     .getConstructor()
                     .newInstance();
-            if (pluginInstances.containsKey(pluginDriver.uuid())) {
-                throw new CloudRuntimeException(
-                        String.format("duplicate plugin[class: %s]", pluginRegisterClz));
-            }
 
             if (pluginValidators.containsKey(pluginRegisterClz)) {
                 pluginValidators.get(pluginRegisterClz).validate(pluginDriver);
             }
 
             // String format all String methods of plugin from pluginRegister to logger.debug
-            logger.debug(String.format("register plugin[class: %s, productKey: %s, version: %s," +
+            logger.debug(String.format("%s[class: %s, productKey: %s, version: %s," +
                             " capabilities: %s, description: %s, vendor: %s, url: %s," +
                             " license: %s]",
+                    pluginInstances.containsKey(pluginDriver.uuid()) ? "reload plugin" : "register plugin",
                     pluginRegisterClz,
                     pluginDriver.uuid(),
                     pluginDriver.version(),
@@ -119,6 +141,7 @@ public class PluginManagerImpl extends AbstractService implements PluginManager 
                 vo.setDescription(pluginDriver.description());
                 vo.setVersion(pluginDriver.version());
                 vo.setLicense(pluginDriver.license());
+                vo.setOptionTypes(JSONObjectUtil.toJsonString(pluginDriver.optionTypes()));
                 dbf.persist(vo);
             } else {
                 vo.setName(pluginDriver.name());
@@ -128,6 +151,7 @@ public class PluginManagerImpl extends AbstractService implements PluginManager 
                 vo.setDescription(pluginDriver.description());
                 vo.setVersion(pluginDriver.version());
                 vo.setLicense(pluginDriver.license());
+                vo.setOptionTypes(JSONObjectUtil.toJsonString(pluginDriver.optionTypes()));
                 dbf.update(vo);
             }
         } catch (Exception e) {
@@ -182,35 +206,23 @@ public class PluginManagerImpl extends AbstractService implements PluginManager 
         // TODO: verify plugin driver
     }
 
-    private void collectPluginValidators() {
-        Platform.getReflections().getSubTypesOf(PluginValidator.class).forEach(clz -> {
-            if (!clz.getCanonicalName().contains("org.zstack.abstraction")
-                    || !clz.isInterface()) {
-                return;
-            }
-
-            if (pluginMetadata.contains(clz)) {
-                throw new CloudRuntimeException(
-                        String.format("duplicate PluginValidator[name: %s]", clz));
-            }
-
-            try {
-                PluginValidator pluginValidator = clz
-                        .getConstructor()
-                        .newInstance();
-
-                pluginValidators.put(pluginValidator.pluginClass(), pluginValidator);
-            } catch (Exception e) {
-                throw new CloudRuntimeException(e);
-            }
-        });
+    private void collectPluginValidators(Class<?> validatorClazz) throws NoSuchMethodException, InvocationTargetException, InstantiationException, IllegalAccessException {
+        PluginValidator pluginValidator = ((Class<? extends PluginValidator>) validatorClazz).getConstructor().newInstance();
+        pluginValidators.put(pluginValidator.pluginClass(), pluginValidator);
     }
 
     @Override
     public boolean start() {
-        collectPluginProtocolMetadata();
-        collectPluginValidators();
-        loadPluginsFromMetadata();
+        if (CoreGlobalProperty.UNIT_TEST_ON) {
+            return true;
+        }
+        new Bash() {
+            @Override
+            protected void scripts() {
+                mkdirs(fileDirPath);
+            }
+        }.execute();
+        scanAndLoadPlugins(fileDirPath);
         return true;
     }
 
@@ -287,23 +299,142 @@ public class PluginManagerImpl extends AbstractService implements PluginManager 
     public void handleMessage(Message msg) {
         if (msg instanceof APIRefreshPluginDriversMsg) {
             handle((APIRefreshPluginDriversMsg) msg);
+        } else if (msg instanceof APIDeletePluginDriversMsg) {
+            handle((APIDeletePluginDriversMsg) msg);
+        } else {
+            handleLocalMessage(msg);
         }
     }
 
-    private void cleanUp() {
-        pluginMetadata.clear();
-        pluginInstances.clear();
-        pluginRegisters.clear();
-        pluginValidators.clear();
+    private void handleLocalMessage(Message msg) {
+        if (msg instanceof RefreshPluginDriversMsg) {
+            handle((RefreshPluginDriversMsg) msg);
+        } else {
+            bus.dealWithUnknownMessage(msg);
+        }
+    }
+
+    protected List<File> getJarFiles(String dirPath) {
+        File dir = new File(dirPath);
+        List<File> jarFiles = new ArrayList<>();
+
+        if (!dir.exists() || !dir.isDirectory()) {
+            return jarFiles;
+        }
+
+        File[] files = dir.listFiles((file) -> file.isFile() && file.getName().endsWith(".jar"));
+        if (files != null) {
+            for (File file : files) {
+                jarFiles.add(file);
+            }
+        }
+        return jarFiles;
+    }
+
+    protected void loadPluginsFromJar(File jarFile) {
+        URL jarUrl = null;
+        try {
+            jarUrl = jarFile.toURI().toURL();
+        } catch (MalformedURLException e) {
+            e.printStackTrace();
+        }
+        try (URLClassLoader classLoader = new URLClassLoader(new URL[]{jarUrl}, getClass().getClassLoader())) {
+            try (JarFile jar = new JarFile(jarFile)) {
+                Enumeration<JarEntry> entries = jar.entries();
+                while (entries.hasMoreElements()) {
+                    JarEntry entry = entries.nextElement();
+                    String entryName = entry.getName();
+                    if (!entryName.endsWith(".class")) {
+                        continue;
+                    }
+
+                    if (entryName.contains("$")) {
+                        continue;
+                    }
+
+                    if (entryName.contains("Test")) {
+                        continue;
+                    }
+
+                    String className = entryName.replace('/', '.').substring(0, entryName.length() - 6);
+                    Class<?> tempClazz = classLoader.loadClass(className);
+                    if (className.contains("Validator")) {
+                        collectPluginValidators(tempClazz);
+                        continue;
+                    }
+
+                    registerPluginAsSingleton((Class<? extends PluginDriver>) tempClazz, (Class<? extends PluginDriver>) tempClazz.getInterfaces()[0]);
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
+    protected void scanAndLoadPlugins(String directoryPath) {
+        List<File> jarFiles = getJarFiles(directoryPath);
+        for (File jarFile : jarFiles) {
+            loadPluginsFromJar(jarFile);
+        }
+    }
+
+    private void handle(RefreshPluginDriversMsg msg) {
+        RefreshPluginDriversReply reply = new RefreshPluginDriversReply();
+        thdf.chainSubmit(new ChainTask(msg) {
+            @Override
+            public String getSyncSignature() {
+                return getName();
+            }
+
+            @Override
+            public void run(SyncTaskChain chain) {
+                scanAndLoadPlugins(fileDirPath);
+                bus.reply(msg, reply);
+                chain.next();
+            }
+
+            @Override
+            public String getName() {
+                return String.format("refresh-%s-plugin-drivers", fileDirPath);
+            }
+        });
+    }
+
+    private void handle(APIDeletePluginDriversMsg msg) {
+        APIDeletePluginDriversEvent event = new APIDeletePluginDriversEvent(msg.getId());
+        // TODO send msg to local and remote mn to delete plugin driver
+        pluginInstances.remove(msg.getUuid());
+        dbf.removeByPrimaryKey(msg.getUuid(), PluginDriverVO.class);
+        bus.publish(event);
     }
 
     private void handle(APIRefreshPluginDriversMsg msg) {
-        APIRefreshPluginDrviersEvent event = new APIRefreshPluginDrviersEvent(msg.getId());
-        cleanUp();
-        collectPluginProtocolMetadata();
-        collectPluginValidators();
-        loadPluginsFromMetadata();
-        bus.publish(event);
+        APIRefreshPluginDriversEvent event = new APIRefreshPluginDriversEvent(msg.getId());
+        new While<>(Q.New(ManagementNodeVO.class).select(ManagementNodeVO_.uuid).listValues()).step((mnUuid, com) -> {
+            RefreshPluginDriversMsg rmsg = new RefreshPluginDriversMsg();
+            bus.makeServiceIdByManagementNodeId(rmsg, SERVICE_ID, (String) mnUuid);
+            bus.send(rmsg, new CloudBusCallBack(com) {
+                @Override
+                public void run(MessageReply reply) {
+                    if (!reply.isSuccess()) {
+                        com.addError(reply.getError());
+                        com.allDone();
+                        return;
+                    }
+
+                    com.done();
+                }
+            });
+        }, 2).run(new WhileDoneCompletion(msg) {
+            @Override
+            public void done(ErrorCodeList errorCodeList) {
+                if (!errorCodeList.getCauses().isEmpty()) {
+                    event.setError(errorCodeList.getCauses().get(0));
+                }
+
+                bus.publish(event);
+            }
+        });
     }
 
     @Override
